# ppisp

./: pyproject.toml  setup.py
ppisp/: __init__.py  bindings.h
ppisp/src/: ppisp_impl.cu
tests/: test_optional_inputs.py
